Added a Tmux plugin and session

--- a/tmux.conf
+++ b/tmux.conf
@@ -5,11 +5,15 @@ set -g default-terminal "screen-256color"
 set -g @tpm_plugins '              \
   tmux-plugins/tpm                 \
   tmux-plugins/tmux-sensible       \
+  tmux-plugins/tmux-sidebar        \
 '
 # Other examples:
 # github_username/plugin_name    \
 # git@github.com/user/plugin     \
 # git@bitbucket.com/user/plugin  \
+
+set -g @sidebar-tree-position 'right'
+bind R source-file ~/.tmux/sessions/rails
 
 # Initializes TMUX plugin manager.
 # Keep this line at the very bottom of tmux.conf.
